--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -247,7 +247,7 @@ für die Erstellung und Aktualisierung von Artefakten verantwortlich. Artefakte 
  Auch wenn alle Tests bestanden werden, sollte der Entwurf an dieser Stelle nochmals überdacht werden. Falls hier beschlossen wird, dass der Code überarbeitet werden muss, muss im Prozess zurückgegangen werden und erneut eine Lösung designt werden, da eine Änderung des Codes die Implementation und die Entwicklertests beeinflussen könnte.\newline
  Da es am Besten ist die Implementierungsteile so klein wie möglich zu halten, sollte zunächst eine kleine Design-Lösung für einen Teil der Arbeitsaufgabe entwickelt werden. Anschließend sollte dies für weitere kleine Teile solange wiederholt werden, bis die gesamte Arbeitsaufgabe implementiert ist. \newline
  In Abbildung \ref{fig:Develop} ist die imperative Modellierung von develop Solution Increment abgebildet.\newline
- Die XOR-Verknüpfung am Anfang führt im Falle einer trivialen Änderung zur sofortigen Ausführung der Aktivität \textit{Entwicklertest implementieren}. Falls es sich jedoch um eine typische Änderung handelt, muss zuvor die Aktivität \ref{fig:Lösung designen} ausgeführt werden. Im Anschluß an \textit{Entwicklertest implementieren} muss die Aktivität \textit{Entwicklertest ausführen} durchgeführt werden.\newline
+ Die XOR-Verknüpfung am Anfang führt im Falle einer trivialen Änderung zur sofortigen Ausführung der Aktivität \textit{Entwicklertest implementieren}. Falls es sich jedoch um eine typische Änderung handelt, muss zuvor die Aktivität \textit{Lösung designen} ausgeführt werden. Im Anschluß an \textit{Entwicklertest implementieren} muss die Aktivität \textit{Entwicklertest ausführen} durchgeführt werden.\newline
  Hiernach wird im Falle eines fehlgeschlagenen Tests zunächst eine \textit{Lösung implementiert} und anschließend erneut der \textit{Entwicklertest ausgeführt}. \newline
  Wenn der Test bestanden ist muss am XOR-Gateway entschieden werden, ob der Code gut designt ist. Falls nein, muss erneut eine Lösung designt werden. Falls doch, kann der Code integriert werden. Ist die Arbeit vollständig erledigt, so ist der Prozess beendet. Wenn jedoch noch weitere Arbeit vorhanden ist, beginnt er von vorne.
  
@@ -367,6 +367,10 @@ Vor dem \textit{Integrieren} muss der Entwicklertest ausgeführt worden sein, wa
 \end{center}
 \end{figure}
 
+Die deklarative Modellierung von Plan and manage iteration findet sich in Abbildung \textit{PlanAndmanageDecKlein}. Gestartet werden kann mit den Aktivitäten {Iteration planen} oder {Arbeitsaufgaben aussuchen}, da diese unabhängig voneinander ausgeführt werden können und von zwei verschiedenen Personen ausgeführt werden können.\newline
+danach können entweder die Aktivitäten \textit{Umgebung vorbereiten} oder \textit{Arbeitsaufgaben in Entwicklungsaufgaben einteilen} ausgeführt werden. Diese sind jeweils mit ihrer Vorgängeraktivität durch das Constraint \textit{succession} verbunden und müssen deshalb auf die Ausführung ihres Vorgängers warten und nach dessen Ausführung ausgeführt werden.\newline
+Das gleiche Ausführungsverhalten gilt auch für die anderen Aktivitäten im Prozess. 
+
 
 
 \begin{figure}[htp]
@@ -377,7 +381,7 @@ Vor dem \textit{Integrieren} muss der Entwicklertest ausgeführt worden sein, wa
 \end{center}
 \end{figure}
 Abbildung \ref{fig:DeployReleaseDecKlein} zeigt die deklarative Modellierung von Deploy Release.\newline
-Zu Beginn muss Die aktivität \textit{Release zusammenstellen} bearbeitet werden, was durch das init-Constraint vorgegeben ist. Danach wird muss die Aktivität \textit{Deploymentplan ausfuehren} durchgeführt werden (Constraint response), aber erst nachdem \textit{Release zusammenstellen} durchgeführt wurde (Contsraint precedence).\newline
+Zu Beginn muss Die Aktivität \textit{Release zusammenstellen} bearbeitet werden, was durch das init-Constraint vorgegeben ist. Danach wird muss die Aktivität \textit{Deploymentplan ausfuehren} durchgeführt werden (Constraint response), aber erst nachdem \textit{Release zusammenstellen} durchgeführt wurde (Contsraint precedence).\newline
 Die gleichen Constraints gelten zwischen den Aktivitäten \textit{Deploymentplan ausfuehren} und \textit{erfolgreiches Deployment sicherstellen}.\newline
 Nach Abschluss der Aktivität \textit{erfolgreiches Deployment sicherstellen} kann entweder die Aktivität \textit{Backoutplan ausfuehren} ausgeführt werden, welche optinal ist (0..1 Constraint) oder die Aktivität \textit{Release-Mitteilungen uebermitteln}, welche auf jeden Fall ausgeführt werden muss.\newline 
 Nach Ausführung von \textit{Release-Mitteilungen uebermitteln} darf \textit{Backoutplan ausfuehren} nicht mehr durchgeführt werden. Dies stellt das Constraint \textit{not succession} sicher.
@@ -535,7 +539,11 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 
 \subsubsection{Angebots- und Vetragswesen}
 Die imperative Modellierung von Angebots- und Vertragswesen zeigt Abbildung \ref{fig:AngebotsVertragswesenKlein}. \newline
-Zunächst wird in der Aktivität\textit{Angebot erstellen} ein \textit{Angebot} angefertigt.\newlineDie nachfolgende Aktivität \textit{Vertrag abschließen} bringt den \textit{Vertrag (AG)} als Output hervor.\newlineAnschließend wird in der folgenden Aktivität \textit{Vertragszusatz abschließen} der \textit{Vertragszusatz (AG)} abgeschlossen.\newlineDie Aktivität \textit{Lieferung erstellen und ausliefern} erbringt sodann die \textit{Lieferung}hervor.\newlineAus der letzten Aktivität \textit{Abnahmeerklärung erhalten} kommt die \textit{Abnahmeerklärung(AG)} heraus.
+Zunächst wird in der Aktivität\textit{Angebot erstellen} ein \textit{Angebot} angefertigt.\newline
+Die nachfolgende Aktivität \textit{Vertrag abschließen} bringt den \textit{Vertrag (AG)} als Output hervor.\newline
+Anschließend wird in der folgenden Aktivität \textit{Vertragszusatz abschließen} der \textit{Vertragszusatz (AG)} abgeschlossen.\newline
+Die Aktivität \textit{Lieferung erstellen und ausliefern} erbringt sodann die \textit{Lieferung}hervor.\newline
+Aus der letzten Aktivität \textit{Abnahmeerklärung erhalten} kommt die \textit{Abnahmeerklärung(AG)} heraus.
 
 
 
@@ -552,7 +560,12 @@ Zunächst wird in der Aktivität\textit{Angebot erstellen} ein \textit{Angebot} 
 
 \subsubsection{Planung und Steuerung}
 In Abbildung \ref{fig:PlanungSteuerungKlein} ist die imperative Modellierung von Planung und Steuerung abgebildet. \newline
-Zu Beginn von Planung und Steuerung muss ein \textit{Projektfortschrittsentscheidung herbeigeführt} werden. Hieraus entsteht das Artefakt \textit{Projektfortschrittsentscheidung}.\newlineHiernach ist in der gleichnamigen Aktivität das \textit{Projekthandbuch zu erstellen}, welches auch als Artefakt aus dieser Aktivität hervorgeht.\newlineIm nächsten Schritt wird das \textit{QS-Handbuch erstellt}.\newlineIn der nachfolgenden Aktivität wird die \textit{Projektmanagement-Infrastruktur eingerichtet und gepflegt}, woraus das Artefakt \textit{Projektmanagementinfrastruktur} entsteht.\newlineAnschließend erfolgt die Durchführung der Aktivität \textit{Schätzung durchführen}, in welche die Artefakte \textit{Schätzmodelle} und \textit{Projektplanung} eingehen und das Artefakt \textit{Projektplan} als Artefakt herauskommt.\newlineBei der nächsten Aktivität wird der \textit{Arbeitsauftrag vergeben} und danach wird die \textit{Kaufmännische Projektkalkulation durchgeführt} mit Hilfe von \textit{Kosten-Nutzen-Analysen und Schätzmodellen} als Input.
+Zu Beginn von Planung und Steuerung muss ein \textit{Projektfortschrittsentscheidung herbeigeführt} werden. Hieraus entsteht das Artefakt \textit{Projektfortschrittsentscheidung}.\newline
+Hiernach ist in der gleichnamigen Aktivität das \textit{Projekthandbuch zu erstellen}, welches auch als Artefakt aus dieser Aktivität hervorgeht.\newline
+Im nächsten Schritt wird das \textit{QS-Handbuch erstellt}.\newline
+In der nachfolgenden Aktivität wird die \textit{Projektmanagement-Infrastruktur eingerichtet und gepflegt}, woraus das Artefakt \textit{Projektmanagementinfrastruktur} entsteht.\newline
+Anschließend erfolgt die Durchführung der Aktivität \textit{Schätzung durchführen}, in welche die Artefakte \textit{Schätzmodelle} und \textit{Projektplanung} eingehen und das Artefakt \textit{Projektplan} als Artefakt herauskommt.\newline
+Bei der nächsten Aktivität wird der \textit{Arbeitsauftrag vergeben} und danach wird die \textit{Kaufmännische Projektkalkulation durchgeführt} mit Hilfe von \textit{Kosten-Nutzen-Analysen und Schätzmodellen} als Input.
 
 \begin{figure}[!htbp]
 \begin{center}
@@ -582,7 +595,12 @@ Zu Beginn von Planung und Steuerung muss ein \textit{Projektfortschrittsentschei
 \subsubsection{Berichtswesen}
 
 
-Am Anfang von Berichtswesen (Abbildung \ref{fig:BerichtswesenimpKlein}) muss eine \textit{Besprechung durchgeführt} werden. Hieraus entsteht das Artefakt \textit{Besprechungsdokument}.\newlineHiernach ist in der gleichnamigen Aktivität das \textit{Projekthandbuch zu erstellen}, welches auch als Artefakt aus dieser Aktivität hervorgeht.\newlineIm nächsten Schritt wird das \textit{QS-Handbuch erstellt}.\newlineIn der nachfolgenden Aktivität wird die \textit{Projektmanagement-Infrastruktur eingerichtet und gepflegt}, woraus das Artefakt \textit{Projektmanagementinfrastruktur} entsteht.\newlineAnschließend erfolgt die Durchführung der Aktivität \textit{Schätzung durchführen}, in welche die Artefakte \textit{Schätzmodelle} und \textit{Projektplanung} eingehen und das Artefakt \textit{Projektplan} als Artefakt herauskommt.\newlineBei der nächsten Aktivität wird der \textit{Arbeitsauftrag vergeben} und danach wird die \textit{Kaufmännische Projektkalkulation durchgeführt} mit Hilfe von \textit{Kosten-Nutzen-Analysen und Schätzmodellen} als Input.
+Am Anfang von Berichtswesen (Abbildung \ref{fig:BerichtswesenimpKlein}) muss eine \textit{Besprechung durchgeführt} werden. Hieraus entsteht das Artefakt \textit{Besprechungsdokument}.\newline
+Hiernach ist in der gleichnamigen Aktivität das \textit{Projekthandbuch zu erstellen}, welches auch als Artefakt aus dieser Aktivität hervorgeht.\newline
+Im nächsten Schritt wird das \textit{QS-Handbuch erstellt}.\newline
+In der nachfolgenden Aktivität wird die \textit{Projektmanagement-Infrastruktur eingerichtet und gepflegt}, woraus das Artefakt \textit{Projektmanagementinfrastruktur} entsteht.\newline
+Anschließend erfolgt die Durchführung der Aktivität \textit{Schätzung durchführen}, in welche die Artefakte \textit{Schätzmodelle} und \textit{Projektplanung} eingehen und das Artefakt \textit{Projektplan} als Artefakt herauskommt.\newline
+Bei der nächsten Aktivität wird der \textit{Arbeitsauftrag vergeben} und danach wird die \textit{Kaufmännische Projektkalkulation durchgeführt} mit Hilfe von \textit{Kosten-Nutzen-Analysen und Schätzmodellen} als Input.
 
 \begin{figure}[!htbp]
 \begin{center}
@@ -607,7 +625,8 @@ In der deklarativen Modellierung von Angebots- und Vertragswesen (Abbildung \ref
 \end{figure}
 
 
-
+
+
 Die deklarative Implementierung von Planung und Steuerng ist in Abbildung \ref{fig:PlanungKleinDec} abgebildet.\newline
 Angefangen wird mit der Aktivität \textit{Projektfortschrittsentscheidung herbeiführen}. Danach wird die Aktivität \textit{Projekthandbuch erstellen} ausgeführt. Die Ausführung dieser darf nicht vor \textit{Projektfortschrittsentscheidung herbeiführen} erfolgen, muss jedoch nach deren Ausführung ausgeführt werden. Aus diesem Grund befindet sich das Constraint \textit{succession} zwischen diesen beiden Aktivitäten. Das gleiche Ausführungsmuster gilt auch für alle weiteren Aktivitäten in diesem Modell. Außerdem erfolgt die Ausführung der jeder Aktivität in diesem Modell genau einmal.
 
